Fix some display issues that @xymostech found on Linux
Summary:
- "SUBMIT!" was rendering as "SUBMITI", so just removed the "!"
- s/overflow/overflow-y to suppress horizontal scrollbar

Test Plan: @xymostech tested it out. :)

Reviewers: spicyj, xymostech

Reviewed By: xymostech

Subscribers: xymostech

Differential Revision: http://phabricator.benalpert.com/D185

--- a/web/static/sass/screen.scss
+++ b/web/static/sass/screen.scss
@@ -236,7 +236,7 @@ code {
       padding: 10px 24px 5px 24px;
       line-height: normal;
       max-height: 160px;
-      overflow: scroll;
+      overflow-y: scroll;
 
       > li {
         list-style-type: none;
